--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,10 +6,13 @@ nav{
 
 .nav-link{
     font-size: 16px;
+    color: white;
+    background-color: #070743;
 }
 
 .nav-link:hover{
     text-decoration: none;
+    color: rgba(254, 171, 222, 1)      /* sirve para cambiar el color cuando ahí esta hover */
 }
 
 .linkStyle{
