--- a/src/components/Home/HomeStyle.css
+++ b/src/components/Home/HomeStyle.css
@@ -5,3 +5,56 @@
 }
 
 body { min-height: 100vh; } */
+
+.container-home{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-image: linear-gradient(rgba(5, 7 ,12, 0.25), rgba(5, 7, 12, 0.25)), url(../images/fondo.png);
+    background-size: cover;        /* estos 2 background ayudan a q la imagen este en toda su posición */
+    background-position: center;
+
+    /* opacity: 0.5; */
+
+}
+
+.wrap-title-button{
+    color: #fff;
+    text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    background:rgba(5, 7 ,12, 0.40);
+}
+
+h2{ 
+   color: rgba(254, 171, 222, 1);
+   font-weight: 600;
+}
+
+.btn-style{
+    cursor: pointer;
+    font-size: 1em;
+    margin-top: 1%;
+    margin-bottom: 10px;
+    border: 2px solid #19ad99;
+    color: #fff;
+    background-color: #19ad99;
+    font-weight: bold;
+    border-radius: 7px;
+    transition: all .3s ease;
+    padding: 6px 12px;
+    text-transform: uppercase;
+}
+
+.btn-style:hover {
+    background:  rgba(254, 171, 222, 1);
+    color:  #19ad99;
+}
+
+@media only screen and (min-width: 768px) {
+   ¨ .btn-style{
+      padding: 10px 25px;
+   }
+   }
