--- a/src/components/Css/About.css
+++ b/src/components/Css/About.css
@@ -1,5 +1,7 @@
-.container-about{
+.hero{
     background-color: rgba(254, 171, 222, 1);
+    min-height: 450px;
+    padding: 40px 0;
 }
 
 .container-image-about{
@@ -7,5 +9,61 @@
     flex-direction: column;
     align-content: center;
     align-items: center;
-    /* display: grid; */
+    margin: 2px 13px;
 }
+
+.title-hero{
+    color: #fff;
+    font-family: Georgia, 'Times New Roman', Times, serif;;
+    font-weight: 600;
+}
+
+
+.container-image{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.image-hero{
+    
+    border: 3px solid rgb(253, 184, 253);
+    border-radius: 8px;
+    background: linear-gradient(#f7b5e8,#f36ae1, #ee3fab);
+    display: flex;
+    width: 40%;
+}
+
+.container-btn{
+    cursor: pointer;
+    font-size: 1em;
+    margin-top: 1%;
+    margin-bottom: 10px;
+    border: 2px solid #19ad99;
+    color: #fff;
+    background-color: #19ad99;
+    font-weight: bold;
+    border-radius: 7px;
+    transition: all .3s ease;
+    padding: 6px 12px;
+    text-transform: uppercase;
+    text-decoration: none;
+    margin-right: auto;
+}
+
+.container-btn:hover {
+    background:  rgba(254, 171, 222, 1);
+    color:  #19ad99;
+}
+
+.container-networks-social{
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+}
+
+@media only screen and (min-width: 768px) {
+    
+   }
