--- a/src/App.css
+++ b/src/App.css
@@ -13,11 +13,20 @@ html{
   }
 
 body {
-  background-color: rgba(254, 171, 222, 1)
+  background-color: rgba(254, 171, 222, 1);
+  line-height: 1.8;     /* ayuda a la separacion entre lineas de texto */
 }
 
 section[id] {
     scroll-margin-top: 70px;
 }
 
+p{
+  font-size: 12px;
+}
 
+@media only screen and (min-width: 768px) {
+  p{
+      font-size: 15px;
+  }
+ }
